<?xml version="1.0" encoding="utf-8"?>

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="#E3F4FF">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_4"
            android:paddingVertical="20dp">

            <Button
                android:id="@+id/new_order_accept_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#52C80A"
                android:text="@string/accept"
                app:layout_constraintBottom_toTopOf="@+id/new_order_reject_btn"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/new_order_reject_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="#DD1414"
                android:text="@string/reject"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_order_accept_btn" />

            <TextView
                android:id="@+id/picked_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/picked_up_date"
                app:layout_constraintStart_toStartOf="@id/order_id"
                app:layout_constraintTop_toBottomOf="@id/order_id" />

            <TextView
                android:id="@+id/delivered_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivered_date"
                app:layout_constraintStart_toStartOf="@id/order_id"
                app:layout_constraintTop_toBottomOf="@id/picked_date" />

            <TextView
                android:id="@+id/price_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                app:layout_constraintStart_toStartOf="@+id/order_id"
                app:layout_constraintTop_toBottomOf="@id/delivered_date" />


            <TextView
                android:id="@+id/index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/_1"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/order_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:maxWidth="200dp"
                android:maxLines="1"
                android:text="@string/order_idnjsdgjsdjsdvn"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/index"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>
