<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_4"
        android:paddingVertical="20dp">
        <TextView
            android:id="@+id/index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_idnjsdgjsdjsdvn"
            app:layout_constraintStart_toEndOf="@+id/index"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:maxWidth="200dp"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/picked_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picked_up_date"
            app:layout_constraintStart_toStartOf="@id/order_id"
            app:layout_constraintTop_toBottomOf="@id/order_id"/>

        <TextView
            android:id="@+id/delivered_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivered_date"
            app:layout_constraintStart_toStartOf="@id/order_id"
            app:layout_constraintTop_toBottomOf="@id/picked_date"/>
        <TextView
            android:id="@+id/price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            app:layout_constraintTop_toBottomOf="@id/delivered_date"
            app:layout_constraintStart_toStartOf="@+id/order_id"/>

        <ImageView
            android:id="@+id/arrow_button"
            android:layout_width="40dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_baseline_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>