<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.OrderFragment"
    android:background="@color/blue_0">



    <com.google.android.material.chip.ChipGroup
        android:id="@+id/order_chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/active"
            android:textSize="15sp"
            app:chipStrokeWidth="1dp"
            app:chipBackgroundColor="@color/blue_4"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipIconTint="@color/blue_5"
            android:text="@string/accepted"
            android:textSize="15sp"
            app:chipStrokeWidth="1dp"
            app:chipBackgroundColor="@color/blue_4"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipIconTint="@color/blue_10"
            android:text="@string/picked"
            android:textSize="15sp"
            app:chipStrokeWidth="1dp"
            app:chipBackgroundColor="@color/blue_4"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipIconTint="@color/blue_5"
            android:text="@string/completed"
            android:textSize="15sp"
            app:chipStrokeWidth="1dp"
            app:chipBackgroundColor="@color/blue_4"/>

    </com.google.android.material.chip.ChipGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height='0dp'

        android:layout_gravity="fill_vertical"
        app:layout_constraintTop_toBottomOf="@id/order_chip_group"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/order_rv"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/no_order_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_new_order"
        style="@style/SubHeading"
        app:layout_constraintTop_toBottomOf="@id/order_chip_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:visibility="invisible"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_chip_group" />
</androidx.constraintlayout.widget.ConstraintLayout>