<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.ShopTypeClothsActivity"
    android:background="@color/blue_0">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="@color/blue_10"
            android:minHeight="?attr/actionBarSize"
            >
            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back"
                android:contentDescription="@string/go_to_back_screen" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingBottom="50dp"
            android:layout_marginBottom="50dp"
            android:layout_gravity="fill_vertical">
            <TextView
                android:id="@+id/shop_type_cloths_tv"
                style="@style/Heading2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:text="@string/shop_types_and_cloths"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView

                android:id="@+id/types_cloths_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/types_of_cloths_available"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shop_type_cloths_tv"
                style="@style/SubHeading"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/mens_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mens"
                app:layout_constraintTop_toBottomOf="@+id/types_cloths_tv"
                android:paddingVertical="10dp"
                android:textSize="20sp"
                android:background="@color/blue_4"
                android:textColor="@color/black_2"
                android:paddingLeft="20dp"
                android:layout_marginTop="10dp"
                />


            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/mens_types_cloths_input_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/mens_tv"/>

            <TextView
                android:id="@+id/women_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/womens"
                app:layout_constraintTop_toBottomOf="@+id/mens_types_cloths_input_rv"
                android:paddingVertical="10dp"
                android:textSize="20sp"
                android:background="@color/blue_4"
                android:textColor="@color/black_2"
                android:paddingStart="20dp"
                android:layout_marginTop="10dp"
                />


            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/women_types_cloths_input_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/women_tv"/>

            <TextView
                android:id="@+id/kids_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kids"
                app:layout_constraintTop_toBottomOf="@+id/women_types_cloths_input_rv"
                android:paddingVertical="10dp"
                android:textSize="20sp"
                android:background="@color/blue_4"
                android:textColor="@color/black_2"
                android:paddingLeft="20dp"
                android:layout_marginTop="10dp"
                />


            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/kids_types_cloths_input_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/kids_tv"/>
            <Button
                android:layout_marginTop="30dp"
                android:id="@+id/next_button"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/next"
                app:layout_constraintTop_toBottomOf="@id/kids_types_cloths_input_rv"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>